Corrections accessibilité et SEO contrast

--- a/Site_Optimiser/style.css
+++ b/Site_Optimiser/style.css
@@ -656,7 +656,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #373737!important;
 }
 
 .container {
@@ -710,7 +710,7 @@ a {
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 26px;
     line-height: 1.4em;
 }
 
@@ -801,7 +801,9 @@ h4 {
 .tc-white {
     color: #F3976C!important;
 }
-
+.tc-orange-dark {
+    color: #A26209!important;
+}
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #443D36!important;
